--- a/index.html
+++ b/index.html
@@ -1181,13 +1181,13 @@
                                         <div class="height-correction">
                                             <div class="text-title text-title-dark">
                                                 <h4>
-                                                    Aesthetic<br>
-                                                    is a decision
+                                                    Instants urbains<br>
+                                            et atmosphères citadines
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                Royalty / Stock
-                                                <span>Friday, June 22, 2018</span>
+                                                Street / Urbain
+                                                <span>Dimanche, 22 Avril 2023</span>
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
