--- a/index.html
+++ b/index.html
@@ -1191,8 +1191,7 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum libero
-                                                    nec erat pulvinar, sed sollicitudin ex consectetur.
+                                                    Plongez dans l'univers fascinant des instants urbains, où les atmosphères citadines sont capturées avec précision à travers l'objectif. Explorez les rues animées et découvrez la beauté cachée qui réside dans chaque coin de la ville. Ces images saisissantes racontent des histoires uniques, révélant la diversité et la richesse de la vie urbaine. Laissez-vous emporter par ces scènes captivantes, où les passants pressés, les bâtiments imposants et les jeux de lumière créent une symphonie visuelle. Chaque cliché est une fenêtre ouverte sur un monde en constante évolution, où l'art et la réalité se rencontrent pour créer des moments inoubliables.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
