--- a/index.html
+++ b/index.html
@@ -1226,12 +1226,12 @@
                                         <div class="height-correction">
                                             <div class="text-title text-title-dark">
                                                 <h4>
-                                                    Style<br>
-                                                    is everything
+                                                    Paysages captivants<br>
+                                            et moments figés
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                Culture / Travel
+                                                Culture / Paysages
                                                 <span>Saturday, June 23, 2018</span>
                                             </div>
                                             <div class="news-text-txt">
