--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                                             <div class="text-title text-title-dark">
                                                 <h4>
                                                     Portraits intemporels<br>
-                                            et émotions saisies
+                                                    et émotions saisies
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
@@ -1101,7 +1101,15 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Les portraits intemporels sont bien plus que de simples images figées dans le temps. Ils sont des témoignages vivants d'émotions capturées avec sensibilité. En plongeant dans l'univers de ces personnes, nous sommes invités à ressentir leur essence profonde. Chaque cliché est une fenêtre ouverte sur des moments uniques, où les sourires, les regards et les gestes révèlent des histoires silencieuses. Ces portraits nous rappellent que derrière chaque visage se cache une multitude de vécus, de rêves et de peines. Ils nous touchent au plus profond de notre être, nous rappelant notre humanité commune et la beauté de la diversité.
+                                                    Les portraits intemporels sont bien plus que de simples images figées dans le
+                                                    temps. Ils sont des témoignages vivants d'émotions capturées avec sensibilité.
+                                                    En plongeant dans l'univers de ces personnes, nous sommes invités à ressentir
+                                                    leur essence profonde. Chaque cliché est une fenêtre ouverte sur des moments
+                                                    uniques, où les sourires, les regards et les gestes révèlent des histoires
+                                                    silencieuses. Ces portraits nous rappellent que derrière chaque visage se cache
+                                                    une multitude de vécus, de rêves et de peines. Ils nous touchent au plus profond
+                                                    de notre être, nous rappelant notre humanité commune et la beauté de la
+                                                    diversité.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
@@ -1137,7 +1145,7 @@
                                             <div class="text-title text-title-dark">
                                                 <h4>
                                                     Voyages en images<br>
-                                            et souvenirs éternels
+                                                    et souvenirs éternels
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
@@ -1146,7 +1154,15 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Laissez-vous emporter dans un voyage extraordinaire à travers des images captivantes qui vous transporteront vers des horizons lointains. Chaque cliché est une fenêtre ouverte sur des destinations exotiques, des paysages à couper le souffle et des cultures fascinantes. Ces photographies uniques vous invitent à explorer le monde et à créer des souvenirs éternels. Laissez-vous émerveiller par la beauté des plages de sable blanc, des montagnes majestueuses et des villes animées. Imprégnez-vous de l'atmosphère envoûtante des marchés colorés, des temples anciens et des ruelles pittoresques. Ces images vous promettent un voyage inoubliable, où chaque instant est une invitation à l'émerveillement.
+                                                    Laissez-vous emporter dans un voyage extraordinaire à travers des images
+                                                    captivantes qui vous transporteront vers des horizons lointains. Chaque cliché
+                                                    est une fenêtre ouverte sur des destinations exotiques, des paysages à couper le
+                                                    souffle et des cultures fascinantes. Ces photographies uniques vous invitent à
+                                                    explorer le monde et à créer des souvenirs éternels. Laissez-vous émerveiller
+                                                    par la beauté des plages de sable blanc, des montagnes majestueuses et des
+                                                    villes animées. Imprégnez-vous de l'atmosphère envoûtante des marchés colorés,
+                                                    des temples anciens et des ruelles pittoresques. Ces images vous promettent un
+                                                    voyage inoubliable, où chaque instant est une invitation à l'émerveillement.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
@@ -1182,7 +1198,7 @@
                                             <div class="text-title text-title-dark">
                                                 <h4>
                                                     Instants urbains<br>
-                                            et atmosphères citadines
+                                                    et atmosphères citadines
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
@@ -1191,7 +1207,15 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Plongez dans l'univers fascinant des instants urbains, où les atmosphères citadines sont capturées avec précision à travers l'objectif. Explorez les rues animées et découvrez la beauté cachée qui réside dans chaque coin de la ville. Ces images saisissantes racontent des histoires uniques, révélant la diversité et la richesse de la vie urbaine. Laissez-vous emporter par ces scènes captivantes, où les passants pressés, les bâtiments imposants et les jeux de lumière créent une symphonie visuelle. Chaque cliché est une fenêtre ouverte sur un monde en constante évolution, où l'art et la réalité se rencontrent pour créer des moments inoubliables.
+                                                    Plongez dans l'univers fascinant des instants urbains, où les atmosphères
+                                                    citadines sont capturées avec précision à travers l'objectif. Explorez les rues
+                                                    animées et découvrez la beauté cachée qui réside dans chaque coin de la ville.
+                                                    Ces images saisissantes racontent des histoires uniques, révélant la diversité
+                                                    et la richesse de la vie urbaine. Laissez-vous emporter par ces scènes
+                                                    captivantes, où les passants pressés, les bâtiments imposants et les jeux de
+                                                    lumière créent une symphonie visuelle. Chaque cliché est une fenêtre ouverte sur
+                                                    un monde en constante évolution, où l'art et la réalité se rencontrent pour
+                                                    créer des moments inoubliables.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
@@ -1227,17 +1251,25 @@
                                             <div class="text-title text-title-dark">
                                                 <h4>
                                                     Paysages captivants<br>
-                                            et moments figés
+                                                    et moments figés
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
                                                 Culture / Paysages
-                                                <span>Saturday, June 23, 2018</span>
+                                                <span>14, 14 Fevrier 2023</span>
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum libero
-                                                    nec erat pulvinar, sed sollicitudin ex consectetur.
+                                                    Explorez une collection de paysages enchanteurs et de moments figés dans
+                                                    l'éternité. Immergez-vous dans la splendeur de la nature et laissez-vous
+                                                    emporter par ces images uniques. Des montagnes majestueuses aux océans infinis,
+                                                    chaque cliché capture la magie de l'instant présent. Admirez les couchers de
+                                                    soleil flamboyants qui embrasent le ciel, les forêts luxuriantes qui invitent à
+                                                    l'évasion et les cascades cristallines qui apaisent l'âme. Chaque photographie
+                                                    est une fenêtre ouverte sur des mondes inexplorés, une invitation à la
+                                                    contemplation et à l'émerveillement. Laissez-vous séduire par la puissance et la
+                                                    sérénité de la nature, et laissez ces images vous transporter vers des horizons
+                                                    infinis.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
