--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                                                     leur essence profonde. Chaque cliché est une fenêtre ouverte sur des moments
                                                     uniques, où les sourires, les regards et les gestes révèlent des histoires
                                                     silencieuses. Ces portraits nous rappellent que derrière chaque visage se cache
-                                                    une multitude de vécus, de rêves et de peines. Ils nous touchent au plus profond
+                                                    une multitude de vécus, de rêves. Ils nous touchent au plus profond
                                                     de notre être, nous rappelant notre humanité commune et la beauté de la
                                                     diversité.
                                                 </p>
