--- a/index.html
+++ b/index.html
@@ -1107,9 +1107,8 @@
                                                     leur essence profonde. Chaque cliché est une fenêtre ouverte sur des moments
                                                     uniques, où les sourires, les regards et les gestes révèlent des histoires
                                                     silencieuses. Ces portraits nous rappellent que derrière chaque visage se cache
-                                                    une multitude de vécus, de rêves. Ils nous touchent au plus profond
-                                                    de notre être, nous rappelant notre humanité commune et la beauté de la
-                                                    diversité.
+                                                    une multitude de vécus, de rêves. Ils nous touchent au plus profond de notre
+                                                    être, nous rappelant notre humanité commune et la beauté de la diversité.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
@@ -1260,16 +1259,17 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Explorez une collection de paysages enchanteurs et de moments figés dans
-                                                    l'éternité. Immergez-vous dans la splendeur de la nature et laissez-vous
-                                                    emporter par ces images uniques. Des montagnes majestueuses aux océans infinis,
-                                                    chaque cliché capture la magie de l'instant présent. Admirez les couchers de
-                                                    soleil flamboyants qui embrasent le ciel, les forêts luxuriantes qui invitent à
-                                                    l'évasion et les cascades cristallines qui apaisent l'âme. Chaque photographie
-                                                    est une fenêtre ouverte sur des mondes inexplorés, une invitation à la
-                                                    contemplation et à l'émerveillement. Laissez-vous séduire par la puissance et la
-                                                    sérénité de la nature, et laissez ces images vous transporter vers des horizons
-                                                    infinis.
+                                                    Plongez dans une collection de moments captivants et de paysages intemporels,
+                                                    qui célèbrent l'amour et l'union sacrée du mariage. Laissez-vous emporter par la
+                                                    beauté envoûtante de la nature, qui devient le décor parfait pour votre histoire
+                                                    d'amour. Des jardins luxuriants aux plages dorées, chaque instant figé dans le
+                                                    temps capture la magie et l'émerveillement de votre journée spéciale. Admirez
+                                                    les rayons du soleil qui dansent sur l'horizon, les vagues caressant doucement
+                                                    le rivage et les fleurs délicates qui égayent votre chemin. Chaque photographie
+                                                    est une fenêtre ouverte sur des souvenirs inoubliables, une invitation à revivre
+                                                    ces moments précieux. Laissez-vous séduire par la puissance de l'amour et la
+                                                    sérénité de la nature, et laissez ces images vous transporter vers un avenir
+                                                    rempli de bonheur infini.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
