--- a/index.html
+++ b/index.html
@@ -1264,10 +1264,9 @@
                                                     beauté envoûtante de la nature, qui devient le décor parfait pour votre histoire
                                                     d'amour. Des jardins luxuriants aux plages dorées, chaque instant figé dans le
                                                     temps capture la magie et l'émerveillement de votre journée spéciale. Admirez
-                                                    les rayons du soleil qui dansent sur l'horizon, les vagues caressant doucement
-                                                    le rivage et les fleurs délicates qui égayent votre chemin. Chaque photographie
-                                                    est une fenêtre ouverte sur des souvenirs inoubliables, une invitation à revivre
-                                                    ces moments précieux. Laissez-vous séduire par la puissance de l'amour et la
+                                                    les rayons du soleil qui dansent sur l'horizon. Chaque photographie est une
+                                                    fenêtre ouverte sur des souvenirs inoubliables, une invitation à revivre ces
+                                                    moments précieux. Laissez-vous séduire par la puissance de l'amour et la
                                                     sérénité de la nature, et laissez ces images vous transporter vers un avenir
                                                     rempli de bonheur infini.
                                                 </p>
