--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta
             content="width=device-width, initial-scale=1, maximum-scale=1"
             name="viewport">
+        <meta property="og:image" content="/img/panda.png">
 
         <!-- style start -->
         <link rel="shortcut icon" href="/img/panda.png" type="image/x-icon">
