--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             content="width=device-width, initial-scale=1, maximum-scale=1"
             name="viewport">
         <meta property="og:image" content="/img/panda.png">
+        <meta name="og:title" content="Elili kitoko">
 
         <!-- style start -->
         <link rel="shortcut icon" href="/img/panda.png" type="image/x-icon">
